<resources>
    <string name="app_name">诺刷</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">返回首页</string>
    <!--设置界面的内容-->
    <string name="setting_device_infos">设备信息</string>
    <string name="setting_device_infos_id">设备ID</string>
    <string name="setting_device_infos_android_version">安卓版本</string>
    <string name="setting_device_infos_hardware_version">硬件版本</string>
    <string name="setting_device_infos_software_version">APP版本</string>

    <string name="place_of_use">使用场所</string>
    <string name="only_electronic_class_card_mode">仅电子班牌模式</string>
    <string name="place_of_use_occasion">场所</string>
    s
    <string name="network_info">网络</string>
    <string name="network_info_wlan">WLAN</string>
    <string name="network_info_ap">热点</string>

    <string name="rfid_info">刷卡器</string>
    <string name="rfid_info_setting">刷卡器设置</string>

    <string name="play_speed">语速设置</string>
    <string name="play_speed_info">语速</string>
    <string name="default_speed_value">60</string>
    <string name="play_speed_tips">提示:取值范围0~100，值越大语速越快，越小语速越慢</string>

    <!--身份认证-->
    <string name="identi_authentication">身份认证</string>
    <string name="identi_auth_mode">认证方式</string>
    <string name="identi_auth_mode_qrcode_and_card">刷卡和二维码认证</string>
    <string name="identi_auth_mode_1_1">1:1认证</string>
    <string name="identi_auth_mode_1_N">1:N认证</string>
    <string name="face_recognize_threshold">人脸识别阈值</string>
    <string name="face_recognize_default_threshold">0.6</string>
    <string name="face_recognize_tips">提示:请输入0~1之间的数值，默认由设备维护人员配置，切勿随意修改</string>

    <!--RFID-->
    <string name="rfid_occasion">刷卡场景</string>
    <string name="the_first_rfid">刷卡器一</string>
    <string name="the_second_rfid">刷卡器二</string>
    <string name="first_rfid_uart_number">串口号</string>
    <string name="first_rfid_uart_baudrate">波特率</string>
    <string name="first_rfid_uart_data_bit">数据位</string>
    <string name="first_rfid_uart_parity_bit">校验位</string>
    <string name="first_rfid_uart_stop_bit">停止位</string>
    <string name="first_rfid_uart_flow_control">流控</string>
    <string name="first_rfid_current_card_number">当前刷卡卡号</string>

    <string name="second_rfid_uart_number">串口号</string>
    <string name="second_rfid_uart_baudrate">波特率</string>
    <string name="second_rfid_uart_data_bit">数据位</string>
    <string name="second_rfid_uart_parity_bit">校验位</string>
    <string name="second_rfid_uart_stop_bit">停止位</string>
    <string name="second_rfid_uart_flow_control">流控</string>
    <string name="second_rfid_current_card_number">当前刷卡卡号</string>

    <string name="default_uart_name">ttyS1</string>
    <!--串口波特率-->
    <string name="baudrate_9600">9600</string>
    <string name="baudrate_19200">19200</string>
    <string name="baudrate_38400">38400</string>
    <string name="baudrate_57600">57600</string>
    <string name="baudrate_115200">115200</string>
    <!--数据位-->
    <string name="data_bit_5">5</string>
    <string name="data_bit_6">6</string>
    <string name="data_bit_7">7</string>
    <string name="data_bit_8">8</string>
    <!--校验位-->
    <string name="parity_bit_None">None</string>
    <string name="parity_bit_Even">Even</string>
    <string name="parity_bit_Odd">Odd</string>
    <string name="parity_bit_Mark">Mark</string>
    <string name="parity_bit_Space">Space</string>
    <!--停止位-->
    <string name="stop_bit_1">1</string>
    <string name="stop_bit_1.5">1.5</string>
    <string name="stop_bit_2">2</string>
    <!--流控-->
    <string name="flow_control_None">None</string>
    <string name="flow_control_RTS_CTS">RTS/CTS</string>
    <string name="flow_control_XON_XOFF">XON/XOFF</string>

    <!--刷卡场景-->
    <string name="card_occasion">刷卡场景</string>
    <string name="card_occasion_normal">普通</string>
    <string name="card_occasion_enter_garden">入园刷卡</string>
    <string name="card_occasion_out_garden">离园刷卡</string>
    <string name="card_occasion_close">关闭刷卡</string>
    <string name="card_occasion_tips">提示：默认由维护人员配置，请勿随意修改！</string>
    <string name="uart_setting">串口设置</string>
    <string name="baudrate_setting">波特率设置</string>
    <string name="databit_setting">数据位设置</string>
    <string name="parity_setting">校验位设置</string>
    <string name="stopbit_setting">停止位设置</string>
    <string name="flow_control_setting">流控设置</string>

    <!--网络设置-->
    <string name="wifi_unconnected">未连接</string>
    <string name="wifi_ap_unopened">未开启</string>
    <string name="network_calibration">网络校准</string>

    <!--人脸识别-->
    <string name="arcsoft_app_id">4VDsSGv5veDC23wHjBo66t6qoJtRVbEv4Ys7sdL1C6qm</string>
    <string name="arcsoft_ft_key">Ejxuw1H8M8rbu599xgCVPeY15Fnrt5x73ZcFbTdvWG7Q</string>
    <string name="arcsoft_fd_key">Ejxuw1H8M8rbu599xgCVPeY8Ef43Rhh7Tpieja7QQvLy</string>
    <string name="arcsoft_fr_key">Ejxuw1H8M8rbu599xgCVPeYctG6jRzHQtiTeFGadN1Ys</string>
    <string name="arcsoft_age_key">Ejxuw1H8M8rbu599xgCVPeYsD4d4AapsTaGfSipwqMVt</string>
    <string name="arcsoft_gender_key">Ejxuw1H8M8rbu599xgCVPeYzNTtDKZsMZ6J9Zjb5owVs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <!-- 考勤管理-->
    <string name="attendheadtext">刷卡信息</string>
    <string name="attendRole">角色:</string>
    <string name="child">宝宝:</string>
    <string name="clazz">班级:</string>
    <string name="icnumber">ic卡:</string>
    <string name="attendtime">时间:</string>
    <string name="attendpointphoto">家庭成员照片：</string>
    <string name="attendteacherpointphoto">老师照片：</string>



</resources>
