<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_attend_leftinfo"
    android:layout_width="200px"
    android:layout_height="match_parent"
    android:background="@drawable/attend_left_corners"
    android:orientation="vertical"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 标题-->
    <RelativeLayout
        android:id="@+id/rel_titile"
        android:layout_width="match_parent"
        android:layout_height="36px"
        android:layout_marginTop="30px"
        android:layout_marginLeft="10px"
        >
        <ImageView
            android:id="@+id/iv_attendhead"
            android:src="@drawable/ic_attendhead"
            android:layout_width="30px"
            android:layout_height="30px" />
        <TextView
            android:layout_toEndOf="@+id/iv_attendhead"
            android:layout_marginLeft="5px"
            android:layout_width="96px"
            android:layout_height="36px"
            android:textSize="24px"
            android:textColor="#ffffff"
            android:text="@string/attendheadtext"
            />

    </RelativeLayout>


    <!-- 刷卡信息详情-->

    <RelativeLayout
        android:layout_below="@+id/rel_titile"
        android:layout_width="match_parent"
        android:layout_height="260px"
        android:layout_marginLeft="45px"
        >
        <TextView
            android:id="@+id/tv_Role"
            android:layout_marginTop="20px"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/attendRole"
            />
        <TextView
            android:layout_below="@+id/tv_Role"
            android:layout_marginTop="16px"
            android:id="@+id/tv_babyname"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/child"
            />
        <TextView
            android:layout_below="@+id/tv_babyname"
            android:layout_marginTop="16px"
            android:id="@+id/tv_clazzname"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/clazz"
            />
        <TextView
            android:layout_below="@+id/tv_clazzname"
            android:layout_marginTop="16px"
            android:id="@+id/tv_icnumber"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/icnumber"
            />
        <TextView
            android:layout_below="@+id/tv_icnumber"
            android:layout_marginTop="16px"
            android:id="@+id/tv_attendtime"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/attendtime"
            />

    </RelativeLayout>

    <!-- 指示右侧为照片-->
    <RelativeLayout
        android:layout_width="200px"
        android:layout_height="80px"
        android:layout_centerInParent="true"

        android:background="@drawable/attendpointbackgruound"
        >
        <TextView
            android:id="@+id/tv_attendpoint"
            android:layout_marginTop="22px"
            android:layout_marginLeft="30px"
            android:layout_width="200px"
            android:layout_height="36px"
            android:textSize="20px"
            android:textColor="#ffffff"
            android:text="@string/attendpointphoto"
            />

    </RelativeLayout>

    <!-- 返回按键-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:layout_marginBottom="30px"
        android:layout_marginLeft="40px"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/bt_attendback"
            android:background="@drawable/attendbackbutton"
            android:layout_width="120px"
            android:layout_height="50px"
            android:paddingTop="10px"
            android:paddingLeft="18px"
            android:paddingRight="18px"
            android:paddingBottom="10px"
            android:text="5s后返回"
            android:textColor="#ffff"
            android:textSize="20px"

            />

    </RelativeLayout>

</RelativeLayout>




</LinearLayout>